# JetsonDoorbell

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/fatfs/: CMakeLists.txt
components/fatfs/src/: ffconf.h
conf/: filename.txt  filename1.txt  filename2.txt
enclosures/: 4in horz speaker grill.SLDPRT  4in horz speaker grill.STEP  4in speaker grill.SLDPRT  FR10 lid.SLDPRT  FR10 lid.STEP  FRS 5 X grill.SLDPRT  FRS 5 X grill.STEP  R10S lid.SLDPRT  R10S lid.STEP  enclosures.md  large box open sides.SLDPRT  large box open sides.STEP  large box.SLDPRT  large box.STEP  large box.STL  small box lid.SLDPRT  small box lid.STEP  small box open sides.SLDPRT  small box open sides.STEP  small box open sides.STL  small box.SLDPRT  small box.STEP  small box.STL
main/: CMakeLists.txt  conf.h  error_blink.c  error_blink.h  global.c  global.h  gpio.c  gpio.h  i2s.c  i2s.h  isr.c  isr.h  main.c  mongoose.c  mongoose_custom.h  net.c  net.h  sd.c  sd.h  tag.h  task.c  task.h  wifi.c  wifi.h
web_root/: app.css  app.js  fw.html  fw.js  index.html
