idf_component_register(SRCS "error_blink.c" "global.c" "i2s.c" "task.c" "isr.c" "gpio.c" "sd.c" "main.c"
                            "wifi.c"
                            "net.c"
    EMBED_FILES
        "../web_root/index.html"
        "../web_root/fw.html"
        "../web_root/app.js"
        "../web_root/fw.js"
        "../web_root/app.css"
        "../web_root/favicon.ico"
        "../web_root/background.jpg"
    REQUIRES
        esp_http_server
    PRIV_REQUIRES
        app_update
        esp_driver_gpio
        esp_driver_i2s
        esp_driver_sdmmc
        esp_event
        esp_netif
        esp_system
        esp_wifi
        fatfs
        nvs_flash
        sdmmc
)
component_compile_options(-DHW_PROFILE)
